# corporate_bias_study

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env_sample  .gitattributes  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.auth  Dockerfile.pipeline  LICENSE  LICENSING.md  README.md  README_Docker.md  app.py  check_fairness_scores.py  check_fairness_scores_v2.py  debug_data_comparison.py  docker-compose.app.yml  docker-compose.auth.yml  docker-compose.pipeline.yml  docker-compose.yml  ga4.html  geniac-prise-submission-guide.md  pyproject.toml  requirements-app.txt  requirements-auth-minimal.txt  requirements-auth.txt  requirements-github-actions.txt  requirements.txt  test_auth.py  test_enterprise_fairness_fix.py  test_ga4_integration.py  test_improved_ranking_analysis.py  test_phase1_base_functions.py  test_phase1_detailed.py  test_phase2_enhanced_functions.py
config/: analysis_config.yml  simple_sns_config.yml  sns_monitoring_config.yml
corporate_bias_datasets/: LICENSE-DATASETS  README.md
data/: sns_posts.db
docs/: analysis_automation_design.md  analysis_summary_design.md  auto_sns_posting_requirements.md  bbq_dataset_analysis.md  bias_metrics_specification.md  cross_analysis_insights.md  dashboard_ui_spec_20250710.md  dynamic_market_analysis_requirements.md  dynamic_market_share_estimation_design.md  dynamic_visualization_implementation_plan.md  enterprise_fairness_score_design.md  enterprise_fairness_score_fix_design.md  enterprise_fairness_score_redesign.md  enterprise_neutrality_score_fix_design.md  fairness_score_calculation_spec.md  folder_structure_improvement_plan.md  ga4_integration_guide.md  ga4_simple_implementation.md  google_oauth_domain_auth_design.md  google_oauth_sso_design.md  hhi_calculation_fix_design.md  hhi_implementation_design.md  hhi_ui_implementation_design.md  integrated_analysis_ui_spec.md  (+25 more)
(+146 files in other folders)
